--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -7,6 +7,7 @@ import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 The "Back to top" button will appear after the use has scrolled partway down the page, and clicking it will take them to the top
 
 <Canvas>
+  <Story name="default">
   <div>
     <main>
       <p>Lorem ipsum</p>
@@ -106,5 +107,6 @@ The "Back to top" button will appear after the use has scrolled partway down the
     </div>
   <div id="footerNav">Footer</div>
   </div>
+  </Story>
 </Canvas>
 
