--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -91,7 +91,7 @@ The "Back to top" button will appear after the use has scrolled partway down the
       <p>Some more</p>
       <p>Some more</p>
     </main>
-    <div class="vsa-top-button-container" id="top-button-container">
+    <div id="top-button-container">
       <div class="usa-grid usa-grid-full">
         <div class="usa-width-three-fourths" id="usa-width-container">
           <div class="usa-content">
