--- a/packages/formation-react/stories/back-to-top.stories.mdx
+++ b/packages/formation-react/stories/back-to-top.stories.mdx
@@ -94,7 +94,7 @@ The "Back to top" button will appear after the use has scrolled partway down the
     <div id="top-button-container">
       <div class="usa-grid usa-grid-full">
           <div class="usa-content">
-            <button type="button" className="usa-button vsa-top-button vads-u-display--flex vads-u-align-items--center">
+            <button type="button" className="usa-button vads-u-display--flex vads-u-align-items--center">
               <p class="vads-u-display--none vads-u-color--white vads-u-margin--0 medium-screen:vads-u-display--block">
                 Back to top
               </p>
