Hide Canvas tab in all the mdx story files

--- a/packages/formation-react/src/components/AlertBox/usage.stories.mdx
+++ b/packages/formation-react/src/components/AlertBox/usage.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Canvas } from '@storybook/addon-docs/blocks';
 
 import AlertBox, { ALERT_TYPE } from './AlertBox';
 
-<Meta title="Designer Documentation/Alert Box" />
+<Meta title="Designer Documentation/Alert Box" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 export const defaultArgs = {
   status: ALERT_TYPE.INFO,
