--- a/packages/formation-react/src/components/CollapsiblePanel/usage.stories.mdx
+++ b/packages/formation-react/src/components/CollapsiblePanel/usage.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Designer Documentation/Accordion" />
+<Meta title="Designer Documentation/Accordion" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # `CollapsiblePanel` (a.k.a. Accordions)
 
