--- a/packages/formation-react/stories/how-to-use-storybook.stories.mdx
+++ b/packages/formation-react/stories/how-to-use-storybook.stories.mdx
@@ -3,7 +3,7 @@ import viewportImage from './images/responsive-viewport-toolbar.png';
 import searchBarImage from './images/search-bar.png';
 import usageDocImage from './images/usage-doc.png';
 
-<Meta title="About/How to use Storybook" />
+<Meta title="About/How to use Storybook" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # How to use Storybook
 For the most part, Storybook is pretty intuitive to use, but there are some
