--- a/packages/formation-react/stories/introduction.stories.mdx
+++ b/packages/formation-react/stories/introduction.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 import LinkTo from '@storybook/addon-links/react'
 
-<Meta title="About/Introduction" />
+<Meta title="About/Introduction" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # Welcome to VSP's Storybook Pilot!
 
