--- a/packages/formation-react/stories/labels-designer-docs.stories.mdx
+++ b/packages/formation-react/stories/labels-designer-docs.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
-<Meta title="Designer Documentation/Labels" />
+<Meta title="Designer Documentation/Labels" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # Labels
 
