--- a/packages/formation-react/stories/labels.stories.mdx
+++ b/packages/formation-react/stories/labels.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Labels" />
+<Meta title="Components/Labels" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 <Canvas>
   <span class="usa-label">New</span>
