--- a/packages/formation-react/stories/horizontal-rules.stories.mdx
+++ b/packages/formation-react/stories/horizontal-rules.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta, Story } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Horizontal rules" />
+<Meta title="Components/Horizontal rules" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # Stars
 
