--- a/packages/formation-react/stories/process-list-designer-docs.stories.mdx
+++ b/packages/formation-react/stories/process-list-designer-docs.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Designer Documentation/Process list" />
+<Meta title="Designer Documentation/Process list" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # Process lists
 
