--- a/packages/formation-react/stories/sidenav-designer-docs.stories.mdx
+++ b/packages/formation-react/stories/sidenav-designer-docs.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Designer Documentation/Sidenav" />
+<Meta title="Designer Documentation/Sidenav" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
 
 # Sidenav
 
