Dont disable canvas tab for docs in Components

--- a/packages/formation-react/stories/featured-content.stories.mdx
+++ b/packages/formation-react/stories/featured-content.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Featured content" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
+<Meta title="Components/Featured content" />
 
 # Featured content
 
