--- a/packages/formation-react/stories/address-block.stories.mdx
+++ b/packages/formation-react/stories/address-block.stories.mdx
@@ -1,6 +1,6 @@
 import { Meta, Story, Canvas } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Address block" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
+<Meta title="Components/Address block" />
 
 <Canvas>
   <p class="va-address-block">
