--- a/packages/formation-react/stories/sidenav.stories.mdx
+++ b/packages/formation-react/stories/sidenav.stories.mdx
@@ -1,6 +1,6 @@
 import { Canvas, Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Components/Sidenav" parameters={{ previewTabs: { 'canvas': { hidden: true }}}} />
+<Meta title="Components/Sidenav" />
 
 <!-- Do we even need this? -->
 
