--- a/packages/documentation/src/pages/forms/available-widgets.mdx
+++ b/packages/documentation/src/pages/forms/available-widgets.mdx
@@ -85,7 +85,7 @@ Renders a `TextWidget` with additional logic to strip non-numeric characters fro
 Renders a single radio button for each `enum` value. This overrides the default `SelectWidget` that is normally rendered where `enum` exists.
 
 - **File:** [RadioWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/RadioWidget.jsx)
-- **Usage:** In the `uiSchema`, specify `'ui:widget': 'radio'` for the given field. Usually used with `'ui:options': { labels: {}}` so you can specify the label for each radio button. To see a code example, refer to [radio button group in form features](/forms/available-features-and-usage-guidelines#radio-button-group).
+- **Usage:** In the `uiSchema`, specify `'ui:widget': 'radio'` for the given field. Usually used with `'ui:options': { labels: {}}` so you can specify the label for each radio button. To see a code example, refer to [radio button group in form features](/forms/available-features-and-usage-guidelines#radio-button-group). Include additional properties on the radio input by including `widgetProps` within the `ui:options`; the key for each input will match the custom option values.
 
 ## `SelectWidget`
 
@@ -113,5 +113,5 @@ Renders a `<input>` HTML element, and is the default widget for data of `type: '
 Renders two radio buttons, one with a value of "Yes" and one with a value of "No".
 
 - **File:** [YesNoWidget.jsx](https://github.com/department-of-veterans-affairs/vets-website/tree/master/src/platform/forms-system/src/js/widgets/YesNoWidget.jsx)
-- **Usage:** In the `uiSchema`, specify `'ui:widget': 'yesNo'` for the given field.
+- **Usage:** In the `uiSchema`, specify `'ui:widget': 'yesNo'` for the given field. Include additional properties on the radio input by including `widgetProps` within the `ui:options`; the key for each input will match the option values of `Y` and `N`.
 
