--- a/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
+++ b/packages/documentation/src/pages/forms/form-tutorial-intermediate.mdx
@@ -162,6 +162,16 @@ page1: {
     myField: {
       'ui:title': 'My field',
       'ui:widget': 'yesNo'
+      'ui:options': {
+        labels: {
+          Y: 'Yes, this is what I want',
+          N: 'No, I do not want this',
+        },
+        widgetProps: {
+          Y: { 'aria-describedby': 'some_id' },
+          N: { 'aria-describedby': 'different_id' },
+        }
+      }
     },
     myConditionalField: {
       'ui:title': 'My conditional field',
@@ -197,7 +207,17 @@ page1: {
   uiSchema: {
     myField: {
       'ui:title': 'My field',
-      'ui:widget': 'yesNo'
+      'ui:widget': 'yesNo',
+      'ui:options': {
+        labels: {
+          Y: 'Yes, this is what I want',
+          N: 'No, I do not want this',
+        },
+        widgetProps: {
+          Y: { 'aria-describedby': 'some_id' },
+          N: { 'aria-describedby': 'different_id' },
+        }
+      }
     },
     myConditionalField: {
       'ui:title': 'My conditional field',
@@ -234,7 +254,17 @@ page1: {
   uiSchema: {
     myField: {
       'ui:title': 'My field',
-      'ui:widget': 'yesNo'
+      'ui:widget': 'yesNo',
+      'ui:options': {
+        labels: {
+          Y: 'Yes, this is what I want',
+          N: 'No, I do not want this',
+        },
+        widgetProps: {
+          Y: { 'aria-describedby': 'some_id' },
+          N: { 'aria-describedby': 'different_id' },
+        }
+      }
     }
   },
   schema: {
